8.10.2/MAE/General/model.md
# 模版

* ## Web支援版本

      8.9.2

* ## APP 支援版本

      008.009.000.001 以上(含)

* __模版__
  * __執行時機__
        元件顯示
  * __元件類型__
    * [文字方塊](../Component/text.md)
    * [下拉選項](../Component/dropList.md)
  * __模版組成__
    * 輸入規則
      * 1. 輸入的小數位數以模版和欄位的小數位數的最小值為主
      * 2. 輸入的整數位數以模版和欄位的的整數位數的最小值為主(有無負號有時會有影響最大位數-最大長度時)
      * 3. 填滿時只有百分比不佔位，所以要先去除多的資料再加上負號/貨幣符號
      * 4. 無填滿時 佔位-小數點/千分位 不佔位-負號/百分比/貨幣符號
      * 5. 連續輸入負號會變正數
    * 文字
      * 不限
      * 限定大寫
      * 特殊格式
        * X：輸入任何值
        * !：小寫字母自動轉成大寫
        * 9：僅允許輸入數字(含負號)
        * A：僅允許英文字母大小寫
        * N：僅允許英文及數字
    * 數字
      * 小數位
      * 千分數
      * 百分比
    * 貨幣
      * 小數位
      * 千分數
      * 貨幣符號
      * 填滿
      * 轉換
        * 國字金額
        * 英文金額
    * 日期
      * 年度
        * 西元年
        * 民國年
      * 格式
        * 年月日
        * 月日年
        * 日月年
        * 年月
        * 月年
        * 月日
        * 日月
      * 分隔
        * /
        * \-
        * .
      * 英文月份
        * 是
        * 否
      * 時間
        * 無
        * 12小時制
        * 24小時制
      * 顯示
        * `HH:MM`
        * `HH:MM:SS`
    * 時間
      * 格式
        * 12時制
        * 24時制
      * 顯示
        * `HH:MM`
        * `HH:MM:SS`
    * _編輯器(不支援)_
  * __顯示遮罩__
    * 遮罩字元
    * 遮罩區段
      * 起始位置
      * 終止位置
      * 區段長度
